objects/Product_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Inactive Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Data</relationshipLabel>
        <relationshipName>Product_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Act_Break_Away_Sec__c</fullName>
        <label>Act Break Away(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Core_Pull_Sec__c</fullName>
        <label>Act Core Pull(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Core_Set_Sec__c</fullName>
        <label>Act Core Set(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Cushion_Position_mm__c</fullName>
        <label>Act Cushion Position(mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Cyc_Delay_Gate_Recycle_Time_Sec__c</fullName>
        <label>Act Cyc Delay/Gate Recycle Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Cycle_Time_Sec__c</fullName>
        <label>Act Cycle Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Ejector_Forward_Sec__c</fullName>
        <label>Act Ejector Forward(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Ejector_Retract_Sec__c</fullName>
        <label>Act Ejector Retract(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fast_Close_Sec__c</fullName>
        <label>Act Fast Close(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fast_Open_Sec__c</fullName>
        <label>Act Fast Open(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Position_mm__c</fullName>
        <label>Act Fill Position(mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Position_stage_1_mm__c</fullName>
        <label>Act Fill Position stage -1 (mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Position_stage_2_mm__c</fullName>
        <label>Act Fill Position stage -2 (mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Position_stage_3_mm__c</fullName>
        <label>Act Fill Position stage -3 (mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Pressure_Bar__c</fullName>
        <label>Act Fill Pressure(Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Pressure_stage_1_bar__c</fullName>
        <label>Act Fill Pressure stage -1 (bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Pressure_stage_2_bar__c</fullName>
        <label>Act Fill Pressure stage -2 (bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Pressure_stage_3_bar__c</fullName>
        <label>Act Fill Pressure stage -3 (bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Time_Sec__c</fullName>
        <label>Act Fill Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Time_stage_1_sec__c</fullName>
        <label>Act Fill Time stage -1 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Time_stage_2_sec__c</fullName>
        <label>Act Fill Time stage -2 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Fill_Time_stage_3_sec__c</fullName>
        <label>Act Fill Time stage -3 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Mould_Protect_Sec__c</fullName>
        <label>Act Mould Protect(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Pack_Hold_Time_Sec__c</fullName>
        <label>Act Pack/Hold Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Refill_Pressure_bar__c</fullName>
        <label>Act Refill Pressure (bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Refill_Time_Sec__c</fullName>
        <label>Act Refill Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Slow_Open_Sec__c</fullName>
        <label>Act Slow Open(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Extra_Zone_1__c</fullName>
        <label>Act Temp Extra Zone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Extra_Zone_2__c</fullName>
        <label>Act Temp Extra Zone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Feed_Throat__c</fullName>
        <label>Act Temp Feed Throat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Nozzle__c</fullName>
        <label>Act Temp Nozzle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Oil__c</fullName>
        <label>Act Temp Oil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Zone_1__c</fullName>
        <label>Act Temp Zone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Zone_2__c</fullName>
        <label>Act Temp Zone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Temp_Zone_3__c</fullName>
        <label>Act Temp Zone 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Tonnage_Time_Sec__c</fullName>
        <label>Act Tonnage Time(Sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Refilling_Pressure_Bar__c</fullName>
        <label>Actual Refilling Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_1_Enable__c</fullName>
        <label>Air Ejection-1 Enable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_1_On_Time_Sec__c</fullName>
        <label>Air Ejection-1 On Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_1_Sequence__c</fullName>
        <label>Air Ejection-1 Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_1_Start_Position_mm__c</fullName>
        <label>Air Ejection-1 Start Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_2_Enable__c</fullName>
        <label>Air Ejection-2 Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_2_On_Time_Sec__c</fullName>
        <label>Air Ejection-2 On Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_2_Sequence__c</fullName>
        <label>Air Ejection-2 Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_2_Start_Position_mm__c</fullName>
        <label>Air Ejection-2 Start Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_3_Enable__c</fullName>
        <label>Air Ejection-3 Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_3_On_Time_Sec__c</fullName>
        <label>Air Ejection-3 On Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_3_Sequence__c</fullName>
        <label>Air Ejection-3 Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Ejection_3_Start_Position_mm__c</fullName>
        <label>Air Ejection-3 Start Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Electrical &amp; Electronics</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Job Moulding</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Packaging – Caps and Closures</fullName>
                </value>
                <value>
                    <fullName>Packaging – Thin Wall</fullName>
                </value>
                <value>
                    <fullName>Packaging – PET Preform</fullName>
                </value>
                <value>
                    <fullName>Packaging – Crates &amp; Material Handling</fullName>
                </value>
                <value>
                    <fullName>Packaging – Rigid Container</fullName>
                </value>
                <value>
                    <fullName>White Goods</fullName>
                </value>
                <value>
                    <fullName>Writing Instruments</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Product Data</relationshipLabel>
        <relationshipName>Product_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Temp_of_Unit_1__c</fullName>
        <label>Avg. Temp of Unit -1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Temp_of_Unit_2__c</fullName>
        <label>Avg. Temp of Unit -2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_Pressure_1_Bar__c</fullName>
        <label>Back Pressure - 1 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Pressure_2_Bar__c</fullName>
        <label>Back Pressure - 2 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Pressure_3_Bar__c</fullName>
        <label>Back Pressure - 3 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Pressure_Bar__c</fullName>
        <label>Back Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_Away_Sec__c</fullName>
        <label>Break Away(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clamp_Open_Limit_mm__c</fullName>
        <label>Clamp Open Limit(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clamp_Position_for_Core_1_mm__c</fullName>
        <label>Clamp Position for Core 1(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clamp_Position_for_Core_2_mm__c</fullName>
        <label>Clamp Position for Core 2(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clamp_Position_for_Core_3_mm__c</fullName>
        <label>Clamp Position for Core 3(mm)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooling_Time_Sec__c</fullName>
        <label>Cooling Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_1_Pull_Sequence__c</fullName>
        <label>Core 1 Pull Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_1_Set_Sequence__c</fullName>
        <label>Core 1 Set Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_2_Pull_Sequence__c</fullName>
        <label>Core 2 Pull Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_2_Set_Sequence__c</fullName>
        <label>Core 2 Set Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_3_Pull_Sequence__c</fullName>
        <label>Core 3 Pull Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_3_Set_Sequence__c</fullName>
        <label>Core 3 Set Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Pull_Sec__c</fullName>
        <label>Core Pull(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Set_Sec__c</fullName>
        <label>Core Set(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                    <default>true</default>
                    <label>India</label>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>GER</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cushion_Position_mm__c</fullName>
        <label>Cushion Position(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Delay_Gate_Recycle_Time_Sec__c</fullName>
        <label>Cycle Delay / Gate Recycle Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Start_Position__c</fullName>
        <label>EOF Start Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF__c</fullName>
        <label>EOF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ejector_Forward_Sec__c</fullName>
        <label>Ejector Forward(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejector_Position_mm__c</fullName>
        <label>Ejector Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejector_Retract_Sec__c</fullName>
        <label>Ejector Retract(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejector_Set_Pressure_Bar__c</fullName>
        <label>Ejector Set Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejector_Speed_mm_sec__c</fullName>
        <label>Ejector Speed(mm/sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Zone_1_Temp__c</fullName>
        <label>Extra Zone - 1 Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Zone_2_Temp__c</fullName>
        <label>Extra Zone - 2 Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fast_Close_Sec__c</fullName>
        <label>Fast Close(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fast_Open_Sec__c</fullName>
        <label>Fast Open(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_Throat_Temp__c</fullName>
        <label>Feed Throat Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fill_Time_Sec__c</fullName>
        <label>Fill Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filler_Grade__c</fullName>
        <label>Filler Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler_Make__c</fullName>
        <label>Filler Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler_Name_Type__c</fullName>
        <label>Filler Name/Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler_Quantity_of_Dosing__c</fullName>
        <label>Filler Quantity of Dosing(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Filling_Actual_Pressure_Bar__c</fullName>
        <label>Filling Actual Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filling_Position_mm__c</fullName>
        <label>Filling Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Pressure_1_Bar__c</fullName>
        <label>Filling Set Pressure - 1 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Pressure_2_Bar__c</fullName>
        <label>Filling Set Pressure - 2 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Pressure_3_Bar__c</fullName>
        <label>Filling Set Pressure - 3 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Pressure_Bar__c</fullName>
        <label>Filling Set Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Speed_1_mm_sec__c</fullName>
        <label>Filling Set Speed - 1 (mm/sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Speed_2_mm_sec__c</fullName>
        <label>Filling Set Speed - 2 (mm/sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Set_Speed_3_mm_sec__c</fullName>
        <label>Filling Set Speed - 3 (mm/sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_Speed_mm_sec__c</fullName>
        <label>Filling Speed(mm/sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frame_Size__c</fullName>
        <formula>Asset__r.Frame_Size__c</formula>
        <label>Frame Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Suck_Back_mm__c</fullName>
        <label>Front Suck Back(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://milacron--fulltest--c.cs92.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=&quot;+ Product_Image_Id__c , &quot;Image&quot;, 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injection_Fill_Profile__c</fullName>
        <label>Injection Fill Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Material_Require_Pre_Drying__c</fullName>
        <label>Is Material Require Pre-Drying?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFI_of_Raw_Material_Used__c</fullName>
        <label>MFI of Raw Material Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <formula>Asset__r.Machine_Model__c</formula>
        <label>Machine Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masterbatch_Grade__c</fullName>
        <label>Masterbatch Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masterbatch_Make__c</fullName>
        <label>Masterbatch Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masterbatch_Name_Type__c</fullName>
        <label>Masterbatch Name/Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masterbatch_Qty_of_Dosing__c</fullName>
        <label>Masterbatch Qty of Dosing(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mould_Cooling__c</fullName>
        <label>Mould Cooling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cooling Tower</fullName>
                </value>
                <value>
                    <fullName>Chiller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mould_Feeding_System__c</fullName>
        <label>Mould Feeding System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                    <default>true</default>
                    <label>Hot</label>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mould_Inlet_Temp__c</fullName>
        <label>Mould Inlet Temp.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_Length_Diameter_mm__c</fullName>
        <label>Mould Length / Diameter(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_Protect_Sec__c</fullName>
        <label>Mould Protect(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_Shut_Height_mm__c</fullName>
        <label>Mould Shut Height(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_Touch_Position_mm__c</fullName>
        <label>Mould Touch Position(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_Width_mm__c</fullName>
        <label>Mould Width(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mould_is_Hot_Runner__c</fullName>
        <label>Mould is Hot Runner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Cavities__c</fullName>
        <label>No. of Cavities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nozzle_Temp__c</fullName>
        <label>Nozzle Temp.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Temp__c</fullName>
        <label>Oil Temp.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Mode__c</fullName>
        <label>Operating Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Semi - Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDS_Name__c</fullName>
        <description>PDS Detailed Name</description>
        <label>PDS Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Pressure_10_Bar__c</fullName>
        <label>Pack / Hold Pressure - 10 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Pressure_1_Bar__c</fullName>
        <label>Pack / Hold Pressure - 1 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Pressure_2_Bar__c</fullName>
        <label>Pack / Hold Pressure - 2 (Bar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Pressure_Bar__c</fullName>
        <label>Pack / Hold Pressure(Bar)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Profile__c</fullName>
        <label>Pack / Hold Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Speed_mm_sec__c</fullName>
        <label>Pack / Hold Speed (mm/sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Time_10_sec__c</fullName>
        <label>Pack / Hold Time - 10 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Time_1_sec__c</fullName>
        <label>Pack / Hold Time - 1 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Time_2_sec__c</fullName>
        <label>Pack / Hold Time - 2 (sec)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Hold_Time_Sec__c</fullName>
        <label>Pack / Hold Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plastic_Raw_Material_Grade__c</fullName>
        <label>Plastic Raw Material Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plastic_Raw_Material_Make__c</fullName>
        <label>Plastic Raw Material Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plastic_Raw_Material_Name_Type__c</fullName>
        <label>Plastic Raw Material Name/Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plastic_Raw_Material_Qty_of_Dosing__c</fullName>
        <label>Plastic Raw Material Qty of Dosing(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Power_Consumption_KG_Hrs__c</fullName>
        <label>Power Consumption KG / Hrs.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Consumption_KWH_Kg__c</fullName>
        <label>Power Consumption KWH / Kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_Consumption_KWH__c</fullName>
        <label>Power Consumption KWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Drying_Temperature__c</fullName>
        <label>Pre-Drying Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Drying_Time_Sec__c</fullName>
        <label>Pre-Drying Time(Sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Injection_Enable__c</fullName>
        <label>Pre-Injection Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Injection_Start_Ton__c</fullName>
        <label>Pre-Injection Start (Ton)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Bottom_Dia_mm__c</fullName>
        <label>Product Bottom Dia(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Height_mm__c</fullName>
        <label>Product Height(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Image_Id__c</fullName>
        <label>Product Image Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <displayFormat>PDS-{00000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Top_Dia_mm__c</fullName>
        <label>Product Top Dia(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Wall_Thickness_mm__c</fullName>
        <label>Product Wall Thickness(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>